Version 1.0RC1/CVS+dev (?? ??? 2004)
  - Recommitted recent files in UNIX format vs DOS. My bad RJ
  - Fixed Bug 986774:Editing Category for and event as Assistant
  - Updated several files to replace <? with <?php
    which causes problems on Windows
  - Fixed Bug 931096: Restrict views and view edits to owner of that view. Added some
    error notices to database calls 
    affected files view_v.php, view_d.php, view_w.php, view_t.php, view_m.php, views_edit.php
  - Fixed Bug 1101823: Problem importing palm desktop datebook.dat file
  - Security fix: Fixed protential problem if a user attempts to login
    with a username that has charaters that will affect the database.
  - Second pass at Bug Fix 1109141: Added empty and "none" testing of
    language pref
  - Changed encode/decode functions used in generating session cookies
    to use md5 of install_password rather than various server variables.
    (Hoping this may help with IE login problems...)
  - Fixed Bug 1109141: Notification language is the senders, not the recipients
    affected files edit_entry.php, del_entry.php, reject_entry.php
  - Fixed Bug 1109323: Error in LDAP get_admins function
  - Patch 1113315: Change maxsize of username from 20 to 25 in
    admin add user form (db was already 25)
  - Patch 1113319: fixed finding of username for http authentication
    (Different versions of PHP store it in different variables.)
  - Fixed bug 1061746: layout issues with view_d.php
  - If php.ini setting for "file_uploads" is not enabled, then indicate
    this on the import page (import.php).
  - Streamlined layers.php & made layers only be displayed when layers
    are enabled
  - Updated Admin docs for content & xhtml/css validity
  - Adding Styling docs (still under construction.. feel free to contribute)
  - Adding title attribute to links
  - Cleaning up html for editing layers & streamlining GUI
  - Making code easier to read & fixing '&' to read '&amp;' in url