@@ -1,4 +1,6 @@
 Version 1.0RC1/CVS+dev (?? ??? 2004)
+  - Declare $HTTP_POST_VARS and $HTTP_GET_VARS as global in getPostValue
+    and getGetValue (functions.php) since they are not auto-global.
   - Recommitted recent files in UNIX format vs DOS. My bad RJ
   - Fixed Bug 986774:Editing Category for and event as Assistant
   - Updated several files to replace <? with <?php
